# glean

./: .gitignore  CHARTER.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: package-guard.yml
docs/: PILOT_findings.md  target-list-policy.md
docs/adr/: 0001-entity-schema.md  0002-adapter-contract.md  0003-correlation-dedup.md  0004-prioritisation-rubric.md  0005-report-brief-contract.md  0006-evaluation-protocol.md  0007-ground-truth-protocol.md
docs/research/: Glean_Research_Matrix.xlsx
docs/schema/: entity-graph.schema.json  example-brief.md  example-scan.json
glean_osint/: __init__.py
